[tool.poetry]
name = "pbsreport"
version = "0.1.0"
description = "Utility for providing metrics from a PBS server"
authors = ["Renato D. Teixeira <me@renatodamas.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
